# binsearch

./: Cargo.toml
cversion/: Cargo.toml  build.rs
cversion/src/: cversion.cpp  lib.rs
floatrun/: Cargo.toml
floatrun/src/: lib.rs
src/: main.rs  parser.rs
