[package]
name = "binsearch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
nom = "6.0"
rand = "0.8"
structopt = "0.3"
alloc_counter = "0.0.4"
memmap = "0.7.0"
cversion = { path = "cversion" }
floatrun = { path = "floatrun" }
